Correções Frontend